[gd_scene load_steps=4 format=3 uid="uid://c4r6rgomwulo7"]

[ext_resource type="Script" path="res://ui.gd" id="1_4d2o2"]
[ext_resource type="Texture2D" uid="uid://dp0edaf1sxxdn" path="res://circulo.png" id="2_0a4b7"]
[ext_resource type="Texture2D" uid="uid://bcxrdbx1eiovc" path="res://box.png" id="3_10umo"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1153.0
offset_bottom = 649.0
script = ExtResource("1_4d2o2")

[node name="PlayerPos" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 40.0
grow_vertical = 0

[node name="Panel" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 705.0
offset_top = 1.0
offset_right = 1151.0
offset_bottom = 402.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 446.0
offset_bottom = 396.0
theme_override_constants/separation = 13

[node name="X" type="PanelContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="Panel/VBoxContainer/X"]
layout_mode = 2
size_flags_horizontal = 4
text = "Position-X"

[node name="value" type="TextEdit" parent="Panel/VBoxContainer/X"]
layout_mode = 2

[node name="Y" type="PanelContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="Panel/VBoxContainer/Y"]
layout_mode = 2
size_flags_horizontal = 4
text = "Position-Y
"

[node name="value" type="TextEdit" parent="Panel/VBoxContainer/Y"]
layout_mode = 2

[node name="Z" type="PanelContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="Panel/VBoxContainer/Z"]
layout_mode = 2
size_flags_horizontal = 4
text = "Position-Z
"

[node name="value" type="TextEdit" parent="Panel/VBoxContainer/Z"]
layout_mode = 2
text = "0"

[node name="SizeX" type="PanelContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="Panel/VBoxContainer/SizeX"]
layout_mode = 2
size_flags_horizontal = 4
text = "Size-X
"

[node name="value" type="TextEdit" parent="Panel/VBoxContainer/SizeX"]
layout_mode = 2

[node name="SizeY" type="PanelContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="Panel/VBoxContainer/SizeY"]
layout_mode = 2
size_flags_horizontal = 4
text = "Size-Y
"

[node name="value" type="TextEdit" parent="Panel/VBoxContainer/SizeY"]
layout_mode = 2

[node name="SizeZ" type="PanelContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="Panel/VBoxContainer/SizeZ"]
layout_mode = 2
size_flags_horizontal = 4
text = "Size-Z
"

[node name="value" type="TextEdit" parent="Panel/VBoxContainer/SizeZ"]
layout_mode = 2

[node name="Rotx" type="PanelContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="Panel/VBoxContainer/Rotx"]
layout_mode = 2
size_flags_horizontal = 4
text = "Rot-X
"

[node name="value" type="TextEdit" parent="Panel/VBoxContainer/Rotx"]
layout_mode = 2

[node name="RotY" type="PanelContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="Panel/VBoxContainer/RotY"]
layout_mode = 2
size_flags_horizontal = 4
text = "Rot-Y"

[node name="value" type="TextEdit" parent="Panel/VBoxContainer/RotY"]
layout_mode = 2

[node name="RotZ" type="PanelContainer" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="Panel/VBoxContainer/RotZ"]
layout_mode = 2
size_flags_horizontal = 4
text = "Rot-Z
"

[node name="value" type="TextEdit" parent="Panel/VBoxContainer/RotZ"]
layout_mode = 2

[node name="ColorPicker" type="ColorPicker" parent="Panel"]
layout_mode = 0
offset_left = -685.0
offset_top = 74.0
offset_right = -403.0
offset_bottom = 642.0

[node name="Axis" type="Button" parent="."]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "AxisObj"

[node name="create" type="Button" parent="."]
layout_mode = 0
offset_top = 34.0
offset_right = 136.0
offset_bottom = 65.0
text = "create a new obj"

[node name="create2" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 699.0
offset_top = 4.0
offset_right = 1152.0
offset_bottom = 444.0

[node name="GridContainer" type="GridContainer" parent="create2"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/h_separation = 23
columns = 2

[node name="Circulo" type="TextureButton" parent="create2/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("2_0a4b7")

[node name="Label" type="Label" parent="create2/GridContainer/Circulo"]
layout_mode = 0
offset_left = 6.0
offset_top = 62.0
offset_right = 61.0
offset_bottom = 88.0
text = "Sphere"

[node name="Box" type="TextureButton" parent="create2/GridContainer"]
layout_mode = 2
texture_normal = ExtResource("3_10umo")

[node name="Label2" type="Label" parent="create2/GridContainer/Box"]
layout_mode = 0
offset_top = 64.0
offset_right = 55.0
offset_bottom = 90.0
text = "Box"

[connection signal="pressed" from="Axis" to="." method="_on_axis_pressed"]
[connection signal="pressed" from="create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="create2/GridContainer/Circulo" to="." method="_on_circulo_pressed"]
[connection signal="pressed" from="create2/GridContainer/Box" to="." method="_on_box_pressed"]
